examples/gallery/errors/type_struct_set_field.fsl
// expected-command: check
// expected-result: error
// expected-kind: type
spec GalleryTypeStructSetField {
  type K = 0..1
  struct Bag { members: Set<K> }
  state { bag: Bag }
  init { bag.members = Set {} }
}
